<resources>
    <string name="app_name">Higher Lower</string>
    <string name="title">Guess if the next throw is going to be lower, equal or higher.</string>
    <string name="lbutton">Lower</string>
    <string name="ebutton">Equals</string>
    <string name="hbutton">Higher</string>
    <string name="lastThrow">Last throw: %d</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
</resources>
